Fix sidebar properties Change the sidebar children properties so that the icons are no longer missaligned with the navigation sidebar

--- a/css/style.css
+++ b/css/style.css
@@ -81,8 +81,11 @@
   }
 
   .logo {
+    display: flex;
+    align-items: center;
+    gap: 10px;
     font-family: 'Roboto', sans-serif;
-    font-weight: 600;
+    font-weight: bold;
     font-size: 2rem;
   }
 
@@ -95,6 +98,17 @@
     background-color: rgb(79, 139, 218);
     padding-left: 5%;
   }
+
+  .side-menu-top div {
+    display: flex;
+    align-items: center; 
+    gap: 10px; 
+    padding: 10px;
+  }
+
+  .side-menu-top div i {
+    font-size: 22px; 
+}
 
   .header {
     display: grid;
